Updated the name for balance calculator

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </h1>
         <div class="tool-list">
             <a href="proffieColorConverter.html" class="tool-button">Proffie Color Converter</a>
-            <a href="lightsaberBalanceCalc.html" class="tool-button">Lightsaber Balance Calculator</a>
+            <a href="lightsaberBalanceCalc.html" class="tool-button">Counterbalance Calculator</a>
             <a href="soundCapture.html" class="tool-button">Sound Capture</a>
         </div>
     </div>
