--- a/lightsaberBalanceCalc.html
+++ b/lightsaberBalanceCalc.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lightsaber Balance Calculator</title>
+    <title>Counterbalance Calculator</title>
     <style>
         * {
             margin: 0;
@@ -284,7 +284,7 @@
     <div class="container">
         <h1>
             <img src="./assets/icons/icons8-laser-sword-150-left.png" alt="Saber Icon" class="saber-icon">
-            Lightsaber Balance Calculator
+            Counterbalance Calculator
             <img src="./assets/icons/icons8-laser-sword-150-right.png" alt="Saber Icon" class="saber-icon">
         </h1>
         
