--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="tool-list">
             <a href="proffieColorConverter.html" class="tool-button">Proffie Color Converter</a>
             <a href="lightsaberBalanceCalc.html" class="tool-button">Counterbalance Calculator</a>
-            <!--<a href="soundCapture.html" class="tool-button">Sound Capture</a>-->
+            <a href="soundCapture.html" class="tool-button">Sound Capture</a>
         </div>
     </div>
 
