Modified to use .env variable for api

--- a/public/soundCapture.html
+++ b/public/soundCapture.html
@@ -586,7 +586,7 @@
         };
 
         // YouTube Data API v3 configuration
-        const YOUTUBE_API_KEY = 'YOUR_API_KEY_HERE'; // Replace with actual API key
+        const YOUTUBE_API_KEY = process.env.NEXT_PUBLIC_YOUTUBE_API_KEY || 'YOUR_API_KEY_HERE';
         const YOUTUBE_API_BASE = 'https://www.googleapis.com/youtube/v3';
 
         // Function to fetch real YouTube metadata using YouTube Data API v3
