--- a/public/index.html
+++ b/public/index.html
@@ -114,6 +114,7 @@
             <a href="proffieColorConverter.html" class="tool-button">Proffie Color Converter</a>
             <a href="lightsaberBalanceCalc.html" class="tool-button">Counterbalance Calculator</a>
             <a href="soundCapture.html" class="tool-button">Sound Capture</a>
+			<a href="audio-trimmer.html" class="tool-button">Audio Trimmer</a>
         </div>
     </div>
 
