Revamp of styles and updates to each form to accomodate and enhance funcationality

--- a/public/index.html
+++ b/public/index.html
@@ -76,9 +76,7 @@
 <body>
     <div class="container">
         <h1>
-            <img src="./assets/icons/icons8-laser-sword-150-left.png" alt="Saber Icon">
             Saber Builder Tools
-			<img src="./assets/icons/icons8-laser-sword-150-right.png" alt="Saber Icon">
         </h1>
         <div class="tool-list">
             <a href="proffieColorConverter.html" class="tool-button">Proffie Color Converter</a>
@@ -88,8 +86,8 @@
         </div>
     </div>
 
-    <div class="footer">
-        Created by <strong style="color: #00d4ff;">JediMasterTech</strong>
-    </div>
+	<div class="footer">
+		Created by <span class="creator">JediMasterTech</span>
+	</div>
 </body>
 </html>
