--- a/public/soundCapture.html
+++ b/public/soundCapture.html
@@ -276,9 +276,7 @@
 <body>
     <div class="container">
         <h1>
-            <img src="./assets/icons/icons8-laser-sword-150-left.png" alt="Saber Icon" class="saber-icon">
             Sound Capture
-            <img src="./assets/icons/icons8-laser-sword-150-right.png" alt="Saber Icon" class="saber-icon">
         </h1>
         
         <div class="error" id="error"></div>
@@ -385,9 +383,9 @@
         </div>
     </div>
 
-    <div style="text-align: center; margin-top: 20px; padding: 15px; color: rgba(255, 255, 255, 0.6); font-size: 0.9rem;">
-        Created by <strong style="color: #00d4ff;">JediMasterTech</strong>
-    </div>
+	<div class="footer">
+		Created by <span class="creator">JediMasterTech</span>
+	</div>
 
     <script>
         let currentVideoData = null;
