Correction on style for audio trimmer

--- a/public/audio-trimmer.html
+++ b/public/audio-trimmer.html
@@ -13,15 +13,6 @@
             overflow: hidden;
         }
 
-        h1 {
-            font-size: 2rem;
-            font-weight: 300;
-            letter-spacing: -0.5px;
-            display: flex;
-            align-items: center;
-            gap: 15px;
-        }
-
         .header {
             background: rgba(255, 255, 255, 0.03);
             padding: 30px;
@@ -448,11 +439,11 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">
-            <h1>
-                Audio Trimmer Pro
-            </h1>
-        </div>
+		<h1>
+			Audio Trimmer Pro
+		</h1>
+		
+		<div class="error" id="error"></div>
 
         <div class="main-content">
             <div class="error-message" id="errorMessage"></div>
