Added New Proffie Style Parser tool

--- a/public/index.html
+++ b/public/index.html
@@ -80,6 +80,7 @@
         </h1>
         <div class="tool-list">
             <a href="proffieColorConverter.html" class="tool-button">Proffie Color Converter</a>
+			<a href="proffieStyleParser.html" class="tool-button">Proffie Style Parser</a>
             <a href="lightsaberBalanceCalc.html" class="tool-button">Counterbalance Calculator</a>
             <a href="soundCapture.html" class="tool-button">Sound Capture</a>
 			<a href="audio-trimmer.html" class="tool-button">Audio Trimmer</a>
