--- a/public/index.html
+++ b/public/index.html
@@ -81,6 +81,7 @@
         <div class="tool-list">
             <a href="proffieColorConverter.html" class="tool-button">Proffie Color Converter</a>
 			<a href="proffieStyleParser.html" class="tool-button">Proffie Style Parser</a>
+			<a href="styleUsingFunction.html" class="tool-button">Proffie Style to Using Function</a>
             <a href="lightsaberBalanceCalc.html" class="tool-button">Counterbalance Calculator</a>
             <a href="soundCapture.html" class="tool-button">Sound Capture</a>
 			<a href="audio-trimmer.html" class="tool-button">Audio Trimmer</a>
