button style update and index name adj

--- a/public/styleUsingFunction.html
+++ b/public/styleUsingFunction.html
@@ -139,16 +139,6 @@
             transform: none;
         }
 
-        .clear-btn {
-            background: linear-gradient(45deg, #6c757d, #545b62);
-            color: white;
-        }
-
-        .clear-btn:hover {
-            transform: translateY(-1px);
-            box-shadow: 0 4px 15px rgba(108, 117, 125, 0.3);
-        }
-
         .error {
             color: #ff6b6b;
             font-size: 0.85rem;
@@ -251,7 +241,7 @@
             
             <div class="button-group">
                 <button type="button" id="convertBtn" class="convert-btn" disabled>Convert to Function</button>
-                <button type="button" id="clearBtn" class="clear-btn">Clear</button>
+                <button type="button" id="clearBtn" class="convert-btn">Clear</button>
             </div>
             
             <div class="success" id="successMsg">
